<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.projectclean.magicpainterforkids.customviews.CustomFontTextView
        android:text="@string/are_you_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:padding="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.projectclean.magicpainterforkids.customviews.CustomFontButton
            android:id="@+id/yes_button"
            android:text="@string/yes"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/red_button_shape"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#fd5c55"
            android:layout_margin="5dp" />

        <com.projectclean.magicpainterforkids.customviews.CustomFontButton
            android:id="@+id/no_button"
            android:text="@string/no"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#2baffc"
            android:layout_margin="5dp" />

    </LinearLayout>

</LinearLayout>