<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paper_texture_small"
    tools:context="magicpainterkids.projectclean.com.magicpainterforkids.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <ImageView
            android:src="@drawable/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"></LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="8"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_vertical">

                <com.projectclean.magicpainterforkids.customviews.CustomFontButton
                    android:id="@+id/main_button_draw"
                    android:text="@string/draw"
                    android:textAllCaps="false"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/button_shape"
                    android:textSize="35dp"
                    android:textAlignment="gravity"
                    android:shadowColor="#00ffffff"
                    android:textColor="#0093c0" />

                <com.projectclean.magicpainterforkids.customviews.CustomFontButton
                    android:id="@+id/main_button_draw_with_background"
                    android:text="@string/draw_background"
                    android:textAllCaps="false"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/green_button_shape"
                    android:textSize="30dp"
                    android:backgroundTint="#00a906"
                    android:textColor="#28b52e"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp" />

                <com.projectclean.magicpainterforkids.customviews.CustomFontButton
                    android:id="@+id/main_button_shop"
                    android:text="@string/shop"
                    android:textAllCaps="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/red_button_shape"
                    android:textSize="40dp"
                    android:backgroundTint="#ff5850"
                    android:textColor="#fd5750" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"></LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/main_button_exit"
        android:src="@drawable/undo_arrow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00ffffff"
        android:scaleType="fitXY"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="15dp" />

</RelativeLayout>
